<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DailyCog</string>
    <string name="short_app_name">DailyCog</string>

    <!--General -->
    <string name="empty_string" />
    <string name="ok">אישור</string>
    <string name="yes">כן</string>
    <string name="no"> לא</string>
    <string name="finish">סיימתי</string>
    <string name="continue_">המשך</string>
    <string name="take_picture">צלם תמונה</string>
    <string name="instructions">הוראות</string>
    <string name="re_take_picture">צלם מחדש</string>
    <string name="enter_text_input_hint">הכנס תשובה</string>
    <string name="sound">השמע</string>
    <string name="stop">הפסק</string>
    <string name="close">סגור</string>
    <string name="goodbye_title">תודה</string>
    <string name="thanks">תודה רבה!</string>
    <string name="exit">יציאה</string>

    <!--Dialogs-->
    <string name="exit_alert_header">אזהרה</string>
    <string name="reminder">תזכורת</string>

    <!--Messages-->
    <string name="some_error">התרחשה שגיאה</string>
    <string name="error_no_more_chores">אין עוד משימות</string>
    <string name="exit_alert_message">אתה יוצא מבלי לסיים את המשימה. האם אתה בטוח?</string>

    <!--Sign Up-->
    <string name="sign_in">היכנס</string>
    <string name="signup">הרשמה</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="confirm_password">אשר סיסמה</string>
    <!--Login Validation-->
    <string name="empty_username">אנא ספק שם משתמש</string>
    <string name="short_password">על הסיסמה להיות באורך 6 תווים לפחות</string>
    <string name="no_confirm_password">אנא הכנס את סיסמתך שוב לצורך אישור</string>
    <string name="login_failed">התחברות נכשלה</string>
    <string name="unmatch_passwords">הסיסמאות אינן תואמות</string>
    <string name="wrong_username">שם המשתמש אינו תקין</string>

    <!--Airplane-->
    <string name="open_settings">פתח הגדרות מצב טיסה</string>
    <string name="airplane_mode_request">הכנס את המכשיר למצב טיסה. לאחר לחיצה על הכפתור הכחול תועבר להגדרות הטלפון לשם ביצוע העברה למצב טיסה. לאחר שתבחר במצב טיסה בטלפון שלך, לחץ על <b>חזור</b> כדי לחזור למסך הזה. לאחר מכן לחץ על כפתור המשך</string>
    <string name="error_not_in_airplane_mode">המכשיר אינו במצב טיסה</string>
    <string name="turn_off_airplane_mode_alert_msg">מומלץ לכבות את מצב הטיסה בעת עזיבת האפליקציה</string>
    <string name="error_in_airplane_mode">לא בוצעה יציאה ממצב טיסה</string>
    <string name="close_airplane_mode">סגור מצב טיסה לפני יציאתך</string>

    <string name="welcome">ברוכים הבאים!  \nכל הכתוב והנאמר בלשון זכר מופנה לנשים וגברים כאחד</string>

    <!--Trial Chore-->
    <string name="trial_pre_instrc">במסך הבא תהיה הנחיה לביצוע משימה בביתך. אנא עקוב אחר ההנחיה. תוכל גם לשמוע אותה על ידי לחיצה על סימן הרמקול. תוכל תמיד לחזור ולראות או לשמוע את ההנחיה
</string>
    <string name="trail_chore_instruction">
קרא את ההוראה וזכור את השלבים. קח בידך את הטלפון שלך, מצא את המפתח של הבית ולך לחדר השינה שלך. שים את המפתח של הבית על הכרית וקרב את השמיכה אל הכרית וצלם. שב על המיטה והקלד חודש ושנה (לדוגמא: 2.2018) ושמך המלא (שם ושם משפחה) בטלפון שלך</string>
    <string name="text_input_instrc">כעת השלם את משימת הכתיבה</string>
    <string name="rating_question">עד כמה טוב אתה חושב שביצעת את המשימה?</string>

    <string name="now_take_photo">כעת צלם:</string>
    <string name="trial_notice">לפנייך משימת התנסות שמטרתה לאפשר לך לקרוא הוראות בטלפון ולבצע את ההוראות השונות</string>
    <string name="order_numbers_instrc">כעת סדר את הספרות בסדר עולה מ1 עד 7 (ניתן לגולל ולגרור את המספרים במסך)</string>


    <!--Goodbye-->
    <string name="goodbye_msg">השלמת את המשימה. תודה רבה!</string>

    <!--Questionnaire-->
    <string name="open_questionnaire">פתח שאלון</string>
    <string name="open_questionnaire_text">כעת ענה על שש השאלות הבאות</string>

    <!--Drink chore-->
    <string name="instruction_drink_instrc_activity">לפניך משימה. יש לבצע אותה ברציפות במטבח. משך המשימה כחמש עד עשר דקות. אין לעסוק בפעילות אחרת, לשוחח או לענות לטלפון בזמן ביצוע המשימה. האם יש לך את הזמן הדרוש לביצוע המשימה במלואה?</string>
    <string name="drink_instrc_dialog_explantion">יש לך אפשרות לקבל עזרה על ידי חזרה אחורה למסך הקודם או השמעת ההוראה.   %1$s \nיש לשים לב שכל בקשת עזרה נרשמת. יש לנסות לבצע את המשימה תוך שימוש בכמה שפחות עזרה</string>
    <string name="drink_first_dialog_msg">כעת תתבקש להכין לעצמך את השתייה החמה שאתה מעדיף. יש לפעול לפי ההוראות. </string>
    <string name="drink_check_box_instrc">כעת הרתח מים להכנת השתייה החמה. לחץ בוצע לאחר תחילת ההרתחה</string>
    <string name="drag_drink_instr">מהו סדר הפעולות שעלייך לבצע על מנת להכין לעצמך שתיה חמה? (זכור שניתן לגולל ולגרור את הפריטים במסך)</string>
    <string name="drink_first_text_instr">הוצא בבקשה והנח על השיש: ספל, כפית, קפה או תה, סוכר או ממתיק, חלב או נענע או כל תוספת אחרת למשקה. כמה פריטים יש לך?</string>
    <string name="dring_photo_instr">כעת צלם את כל הפריטים יחד</string>
    <string name="drink_second_dialog_msg">אם המים טרם רתחו המתן עד שירתחו. לאחר שהמים רתחו, הכן את השתיה החמה ובסיום לחץ על סיימתי</string>
    <string name="dring_photo_dring_done">צלם את המשקה המוכן</string>
    <string name="drink_time_valuat_text_instrc">כמה זמן אתה מעריך שלקח לך לבצע את המשימה?</string>

    <string name="drink_minutes">דקות</string>
    <string name="header_drink_instrc_activity">הנחיה</string>
    <string name="check_box_text">בוצע</string>
    <string name="finish_drink">סיימת את המשימה להיום. שתייה נעימה! \n המשך לשאלות במסך הבא</string>
    <string name="sound_error">אירעה שגיאה בעת ההשמעה</string>

    <string name="list_first_dialog_msg">כעת תתבקש להכין רשימת קניות של כ-10 פריטים. יש לפעול על פי ההוראות</string>
    <string name="drag_list_instr">מהו סדר הפעולות שעליך לבצע על מנת להכין לעצמך רשימת קניות של מוצרים הדורשים קירור?</string>
    <string name="list_check_box_instrc">בבקשה הוצא דף או פנקס, לחץ בוצע לאחר הוצאתו</string>
    <string name="list_first_text_instr">כעת רשום על הדף רשימה של לפחות 4 מוצרים שנשמרים בדרך כלל במקרר שאתה צריך לקנות. כמה פריטים רשמת?</string>
    <string name="list_photo_instr">כעת צלם את הרשימה שהכנת</string>
    <string name="list_second_dialog_msg">במידה וסיימת לחץ  סיימתי</string>
    <string name="list_photo_list_done">כעת צלם את הרשימה המוכנה</string>
    <string name="finish_list">סיימת את המשימה להיום. תודה רבה!</string>
    <string name="temp_delete">trial-chore</string>
    <string name="notice">שים לב</string>
    <string name="no_more_chores">אין עוד משימות לביצוע. זכור לצאת ממצב טיסה</string>
    <string name="privacy_policy"><a href="https://privacypolicies.com/privacy/view/651b959cd468ac68961a38879df0adf8">מדיניות פרטיות</a></string>


</resources>