<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleLayuot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="il.ac.pddailycogresearch.pddailycog.fragments.viewpager.TextFragment">
<RelativeLayout
    style="@style/StyleLayuot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textViewInstrc"
        style="@style/StyleTextView"
        android:text="@string/drink_first_text_instr" />

    <RelativeLayout
        style="@style/StyleLayuot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewInstrc"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EditTextInputFragment"
            style="@style/StyleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textViewMinutes"
            android:hint="@string/enter_text_input_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewMinutes"
            style="@style/StyleSimpleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink_minutes"
            />

    </RelativeLayout>
</RelativeLayout>
</ScrollView>
