<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    style="@style/StyleActivityLayuot"
    tools:context="il.ac.pddailycogresearch.pddailycog.activities.DrinkInstrcActivity">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relativeLayoutUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:orientation="horizontal">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buttonSoundDrinkInstrcActivity"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:src="@drawable/sound_icon"
            app:backgroundTint="@color/colorButtons"
            app:fabSize="normal" />
    </RelativeLayout>
    <TextView
        style="@style/StyleTextView"
        android:textColor="@color/red_dark"
        android:layout_below="@+id/relativeLayoutUp"
        android:id="@+id/textViewHeaderDrinkInstrcActivity"
        android:text="@string/header_drink_instrc_activity"/>
    <TextView
        style="@style/StyleTextView"
        android:id="@+id/textViewInstrcDrinkInstrcActivity"
        android:layout_below="@+id/textViewHeaderDrinkInstrcActivity"

        android:text="@string/instruction_drink_instrc_activity"/>
    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
      >
    <Button
        style="@style/StyleButton"
        android:id="@+id/buttonYesDrinkIstrcActivity"
        android:text="@string/yes"/>

    <Button
        style="@style/StyleButton"
        android:id="@+id/buttonNoDrinkIstrcActivity"
        android:text="@string/no"/>
    </LinearLayout>

</RelativeLayout>
</ScrollView>