<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleLayuot"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="il.ac.pddailycogresearch.pddailycog.activities.simple.AirplaneModeRequestActivity">
<RelativeLayout
    style="@style/StyleLayuot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="logout" />

    <TextView
        android:id="@+id/textViewAirplaneModeRequest"
        style="@style/StyleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/airplane_mode_request" />

    <Button
        android:id="@+id/buttonOpenAirplaneModeSettings"
        style="@style/StyleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAirplaneModeRequest"
        android:layout_gravity="center"
        android:text="@string/open_settings" />

    <Button
        android:id="@+id/buttonAirplaneOk"
        style="@style/StyleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonOpenAirplaneModeSettings"
        android:layout_gravity="center"
        android:text="@string/continue_" />
</RelativeLayout>

</ScrollView>
